--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -6,7 +6,10 @@
     display: flex;
     width: 100%;
     margin: 30px 0px 0px 30px;
+    gap: 75px;
+    padding: 0px 15px;
 }
+
 
 .twoCard,
 .oneCard {
@@ -16,4 +19,9 @@
     justify-content: space-around;
     align-content: center;
     align-items: center;
+    gap: 25px;
+}
+
+.oneCard{
+    justify-content: flex-start;
 }
