Sidebar styling and Moment

--- a/src/Pages/Dashboard/style.css
+++ b/src/Pages/Dashboard/style.css
@@ -19,3 +19,9 @@
     border-radius: 20px;
     height: 70vh;
 }
+
+@media screen and (max-width:600px) {
+    .emptySpace{
+        display: none;
+    }
+}
