--- a/src/Components/Sidebar/style.css
+++ b/src/Components/Sidebar/style.css
@@ -5,9 +5,17 @@
     padding: 10px 0px;
     gap: 30px;
     margin: 30px 0px 0px 30px;
+    align-items: center;
 }
 
 .sidebar button {
     background-color: rgba(0, 0, 0, 0);
     border: 0px solid white;
+}
+
+.conditional {
+    background-color: #f6f7ff !important;
+    border-radius: 12px !important;
+    height: 40px !important;
+    width: 40px !important;
 }
